--- a/public/styles.css
+++ b/public/styles.css
@@ -7,8 +7,18 @@ body {
     margin: 0;
 }
 
-.container {
+h1 {
     text-align: center;
+    color: #333;
+    margin-top: 20px;
+}
+
+
+
+
+
+.container {
+    text-align: left;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
