Upload_Image_Progress_Report

--- a/public/styles.css
+++ b/public/styles.css
@@ -14,7 +14,24 @@ h1 {
 }
 
 
-
+#progress {
+    width: 100%;
+    background-color: #f3f3f3;
+    border: 1px solid #ccc;
+    margin-top: 20px;
+}
+#progressBar {
+    width: 0%;
+    height: 30px;
+    background-color: #4caf50;
+    text-align: center;
+    color: white;
+    line-height: 30px;
+}
+#message {
+    margin-top: 20px;
+    font-size: 16px;
+}
 
 
 .container {
