--- a/public/styles.css
+++ b/public/styles.css
@@ -22,15 +22,15 @@ h1 {
 }
 #progressBar {
     width: 0%;
-    height: 30px;
-    background-color: #4caf50;
+    height: 20px;
+    background-color: #007bff;
     text-align: center;
     color: white;
-    line-height: 30px;
+    line-height: 20px;
 }
 #message {
     margin-top: 20px;
-    font-size: 16px;
+    font-size: 12px;
 }
 
 
